Migrate in Java 11