@@ -14,8 +14,9 @@
     </parent>
 
     <properties>
-        <java.version>8</java.version>
+        <java.version>11</java.version>
         <!--Productive dependencies-->
+        <java.version>11</java.version>
         <apache.lang-version>2.6</apache.lang-version>
         <lombok.version>1.18.8</lombok.version>
         <jaxws.version>2.3.2</jaxws.version>
@@ -28,11 +29,15 @@
         <mockito.version>3.2.0</mockito.version>
         <selenium.version>1.0.1</selenium.version>
         <!--Build Plugins-->
-        <maven.findbugs.plugin.version>3.0.5</maven.findbugs.plugin.version>
-        <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
-        <maven.jacoco.plugin.version>0.8.4</maven.jacoco.plugin.version>
         <maven.dockerfile.plugin.version>1.3.7</maven.dockerfile.plugin.version>
-        <maven.sufire.plugin.version>2.20.1</maven.sufire.plugin.version>
+        <maven.jacoco.plugin.version>0.8.4</maven.jacoco.plugin.version>
+        <maven.spotbugs.plugin.version>3.1.12.2</maven.spotbugs.plugin.version>
+        <maven.pmd.plugin.version>3.13.0</maven.pmd.plugin.version>
+        <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
+        <maven.sufire.plugin.version>2.22.2</maven.sufire.plugin.version>
+        <maven.resources.plugin.version>3.0.2</maven.resources.plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <repositories>
@@ -123,20 +128,11 @@
             <artifactId>htmlunit</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>findbugs-maven-plugin</artifactId>
-            <version>${maven.findbugs.plugin.version}</version>
-        </dependency>
     </dependencies>
 
     <build>
         <!-- Build Process with check of : 1. Code Quality, Testing and bugs -->
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
             <!-- 1. Check all files in src if they met the code Conventions -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -157,11 +153,11 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- 2. Make static Code Analysis with find Bugs -->
+            <!-- 2. Make static Code Analysis with spot Bugs -->
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>${maven.findbugs.plugin.version}</version>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>${maven.spotbugs.plugin.version}</version>
                 <configuration>
                     <excludeFilterFile>${project.basedir}/findbugs/findbugs-exclude.xml</excludeFilterFile>
                     <!-- Enables analysis which takes more memory but finds more bugs. -->
@@ -171,7 +167,7 @@
                     <!-- Produces XML report -->
                     <xmlOutput>true</xmlOutput>
                     <!-- Configures the directory in which the XML report is created -->
-                    <findbugsXmlOutputDirectory>${project.build.directory}/findbugs</findbugsXmlOutputDirectory>
+                    <spotbugsXmlOutputDirectory>${project.build.directory}/findbugs</spotbugsXmlOutputDirectory>
                 </configuration>
                 <executions>
                     <!-- Ensures that FindBugs inspects source code when project is compiled. -->
@@ -184,7 +180,32 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- 3. Execute Test Coverage analysis with jacoco to assure quality expactations are met -->
+            <!-- 2. Make static Code Analysis with pmd -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>${maven.pmd.plugin.version}</version>
+                <configuration>
+                    <failOnViolation>true</failOnViolation>
+                    <linkXRef>true</linkXRef>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>analyze-compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>check</goal>
+                            <goal>cpd-check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- 3. Unit Tests  start -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <!-- 4. Execute Test Coverage analysis with jacoco to assure quality expectations are met -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -204,8 +225,10 @@
                         <configuration>
                             <excludes>
                                 <!-- configuration exclude -->
-                                <exclude>de/blackforestsolutions/hazelcast/configuration/*</exclude>
-                                <exclude>**/*de/blackforestsolutions/hazelcast/Application.class</exclude>
+                                <exclude>de/blackforestsolutions/crawler/configuration/*</exclude>
+                                <exclude>**/*de/blackforestsolutions/crawler/Application.class</exclude>
+                                <exclude>de/blackforestsolutions/crawler/service/mapper/MapperService.class</exclude>
+                                <exclude>de/blackforestsolutions/crawler/util/TimeUtil.class</exclude>
                             </excludes>
                             <rules>
                                 <rule>
@@ -214,7 +237,7 @@
                                         <limit>
                                             <counter>LINE</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.80</minimum>
+                                            <minimum>0.00</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
@@ -223,13 +246,13 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- 4. Put Everything in docker container -->
+            <!-- Put Everything in docker container -->
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <version>${maven.dockerfile.plugin.version}</version>
                 <configuration>
-                    <repository>blackforestsolutions/${project.artifactId}</repository>
+                    <repository>${project.artifactId}</repository>
                     <buildArgs>
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
@@ -249,6 +272,27 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>${maven.resources.plugin.version}</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <junitArtifactName>junit:junit</junitArtifactName>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+                        -Dfile.encoding=UTF-8
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
